<resources>
    <string name="app_name">ReMind</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="family_uploads">Family Uploads</string>
    <string name="capsule">Capsule</string>
    <string name="reminders">Reminders</string>
    <string name="my_journal">My Journal</string>
    <string name="today_s_reminders">Today\'s Reminders</string>
    <string name="this_is_the_content_of_your_newest_note">This is the content of your newest note...</string>
    <string name="recent_photo">Recent Photo</string>
    <string name="new_journal_entry">New Journal Entry</string>
    <string name="write_your_thoughts_here">Write your thoughts here...</string>
    <string name="save">Save</string>
    <string name="saved_entries">Saved Entries</string>
    <string name="todo">TODO</string>
    <string name="newest_note">Newest Note</string>
    <string name="this_is_the_journal_page">This is the Journal page!</string>
</resources>