<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transform"
            android:icon="@drawable/journal2"
            android:title="@string/my_journal" />
        <item
            android:id="@+id/nav_reflow"
            android:icon="@drawable/reminder"
            android:title="@string/reminders" />
        <item
        android:id="@+id/nav_slideshow"
        android:icon="@drawable/ic_gallery_black_24dp"
        android:title="@string/capsule" />
        <item
            android:id="@+id/nav_FamilyUploads"
            android:icon="@drawable/family"
            android:title="@string/family_uploads" />

    </group>

</menu>