<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".JournalActivity">

    <TextView
        android:id="@+id/textViewNewNoteTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_journal_entry"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNewJournalEntry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:background="@android:drawable/edit_text"
        android:gravity="top|start"
        android:hint="@string/write_your_thoughts_here"
        android:inputType="textMultiLine|textCapSentences"
        android:minHeight="100dp"
        app:layout_constraintEnd_toStartOf="@id/buttonSaveJournalEntry"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNewNoteTitle" />

    <Button
        android:id="@+id/buttonSaveJournalEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toTopOf="@id/editTextNewJournalEntry"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewSavedNotesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_entries"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextNewJournalEntry" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewJournalEntries"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewSavedNotesTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_journal_entry" />

</androidx.constraintlayout.widget.ConstraintLayout>

